--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,24 @@
 locale: "en-US"
-title: Strata # Title of your site
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+title: Open Source Security Software Hackathon 2017 # Title of your site
+url: "https://hackathon.hack.lu" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog/
 google_analytics_key: ""
 
 # Default description in social shares for the jekyll-seo-tag gem
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
+    The Open Source Security Software Hackathon is a 2-days open hackathon to bring
+    people and open source security software/tools together.
 # Author details for the jekyll-seo-tag gem
 author:
-  name: Your Name
-  email: your-email@domain.com
-  twitter: # twitter username without the @ symbol
+  name: hack.lu team
+  email: info@hack.lu
+  twitter: hack_lu # twitter username without the @ symbol
 
 # Social details for the jekyll-seo-tag gem
 social:
-  name: Strata Reloaded Template
+  name: Open Source Security Software Hackathon 2017
   links:
-    - https://github.com/comfusion/strata-reloaded-jekyll-template
+    - https://hackathon.hack.lu
 
 permalink: pretty
 
